--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,10 +11,31 @@
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
-<form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
+<form th:action="@{/login}" method="post" id="form">
+    <div><label> User Name : <input type="text" id="username"/> </label></div>
+    <div><label> Password: <input type="password" id="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
+<script>
+    document.getElementById('form').addEventListener('submit', e => {
+        e.preventDefault();
+
+        fetch('http://localhost:8080/login', {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json; charset=utf-8'},
+            body: JSON.stringify({
+                username: document.getElementById('username').value,
+                password: document.getElementById('password').value
+            })
+        }).then(res => {
+            if (res.ok) return res.json();
+            throw res.json();
+        }).then(() => alert('succeed to login!'))
+          .catch(res => {
+              console.dir(res);
+              res.then(() => alert('failed to login!'))
+          });
+    })
+</script>
 </body>
 </html>
